--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": ">=18.2.0 <19"
   },
   "devDependencies": {
+    "@types/node": "^24.7.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "rimraf": "^6.0.1",
