--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,16 @@
     "jsx": "react-jsx",
     "moduleResolution": "Node",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
     "strict": true,
+    "skipLibCheck": true,
     "declaration": true,
-    "outDir": "dist",
-    "types": ["node", "react", "react-dom"]
+    "declarationMap": false,
+    "emitDeclarationOnly": false,
+    "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
+    "types": ["react", "react-dom", "node"],
+    "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["dist", "node_modules"]
 }
