--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@onlinefreecv/google-image-picker",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "description": "Google Drive Image Picker (React/Next.js) for OnlineFreeCV",
   "type": "module",
-  "sideEffects": false,
+  "sideEffects": [
+  "**/*.css",
+  "**/*.scss"
+ ],
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
